--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,8 +57,8 @@ body{
 }
 
 .button{
+  cursor: pointer;
   display: block;
-  max-width: fit-content;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -70,7 +70,7 @@ body{
   border-radius: 4px;
   border: none;
   box-sizing: border-box;
-  transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
+  transition: background-color 250ms ease-in-out, color 250ms ease-in-out, opacity 250ms ease-in-out;
 }
 
 .button-small{
@@ -95,7 +95,8 @@ body{
   background: #756157;
 }
 
-.button-primary:not(:disabled):hover, .button-primary:not(:disabled):focus-visible{
+.button-primary:not(:disabled):hover,
+.button-primary:not(:disabled):focus-visible{
   background: #615048;
 }
 
@@ -104,7 +105,9 @@ body{
   background: #756157;
 }
 
-.button-primary:disabled, .button-secondary:disabled, .button-selected:disabled{
+.button-primary:disabled,
+.button-secondary:disabled,
+.button-selected:disabled{
   color: #FFFFFF;
   background: #E5E5E5;
 }
@@ -114,7 +117,8 @@ body{
   background: #82B3D3;
 }
 
-.button-secondary:not(:disabled):hover, .button-secondary:not(:disabled):focus-visible{
+.button-secondary:not(:disabled):hover,
+.button-secondary:not(:disabled):focus-visible{
   background: #68A2CA;
 }
 
@@ -154,7 +158,8 @@ body{
   background: #7DB54F;
 }
 
-.button-selected:not(:disabled):hover, .button-selected:not(:disabled):focus-visible{
+.button-selected:not(:disabled):hover,
+.button-selected:not(:disabled):focus-visible{
   background: #6C9E42;
 }
 
@@ -203,7 +208,8 @@ body{
   transition: color 250ms ease-in-out;
 }
 
-.navigation-link:hover, .navigation-link:focus-visible{
+.navigation-link:hover,
+.navigation-link:focus-visible{
   color: #83B3D3;
 }
 
@@ -286,20 +292,32 @@ body{
   margin-bottom: 90px;
 }
 
-.navigation-list, .advantages-list, .features-list, .social-list, .view-type-list, .catalog-breadcrumbs-list, .pagination-list, .catalog-filter-list, .hotels-list, .stars-list{
+.navigation-list,
+.advantages-list,
+.features-list,
+.social-list,
+.view-type-list,
+.catalog-breadcrumbs-list,
+.pagination-list,
+.catalog-filter-list,
+.hotels-list,
+.stars-list{
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
-.advantages-list, .features-list{
+.advantages-list,
+.features-list{
   display: flex;
   width: 1200px;
   flex-wrap: wrap;
 
 }
 
-.advantages-item-title, .features-item-title, .hotel-card-title{
+.advantages-item-title,
+.features-item-title,
+.hotel-card-title{
   margin: 0;
   font-weight: 700;
   font-size: 24px;
@@ -307,17 +325,21 @@ body{
   text-transform: uppercase;
 }
 
-.advantages-item-title, .features-item-title{
+.advantages-item-title,
+.features-item-title{
   margin: 0 auto 30px;
   width: 175px;
   text-align: center;
 }
 
-.advantages-item-description, .features-item-description{
+.advantages-item-description,
+.features-item-description{
   margin: 0;
 }
 
-.advantages-item, .features-item, .advantages-item-media__text-wrapper{
+.advantages-item,
+.features-item,
+.advantages-item-media__text-wrapper{
   padding: 102px 85px;
   display: flex;
   flex-direction: column;
@@ -371,7 +393,12 @@ body{
   color: #ffffff;
 }
 
-.advantages-title, .features-title, .booking-title, .subscription-title, .hotels-counter{
+.advantages-title,
+.features-title,
+.booking-title,
+.subscription-title,
+.hotels-counter,
+.modal-title{
   margin-top: 0;
   font-weight: 700;
   font-size: 30px;
@@ -379,7 +406,10 @@ body{
   text-transform: uppercase;
 }
 
-.advantages-description, .features-description, .booking-description, .subscription-description{
+.advantages-description,
+.features-description,
+.booking-description,
+.subscription-description{
   margin-top: 0;
   font-size: 22px;
   line-height: 26px;
@@ -387,7 +417,8 @@ body{
   text-align: center;
 }
 
-.advantages-item-description, .features-item-description{
+.advantages-item-description,
+.features-item-description{
   color: #333333;
 }
 
@@ -562,23 +593,28 @@ body{
   align-items: center;
 }
 
-.developer-link, .contacts-phone{
+.developer-link,
+.contacts-phone{
   color: #000000;
 }
 
-.developer-link:visited, .contacts-phone:visited{
+.developer-link:visited,
+.contacts-phone:visited{
   color: #000000;
 }
 
-.developer-link:hover, .contacts-phone:hover{
+.developer-link:hover,
+.contacts-phone:hover{
   color: #756157;
 }
 
-.developer-link:focus-visible, .contacts-phone:focus-visible{
+.developer-link:focus-visible,
+.contacts-phone:focus-visible{
   color: #756157;
 }
 
-.developer-link:active, .contacts-phone:active{
+.developer-link:active,
+.contacts-phone:active{
   color: #7561574D;
 }
 
@@ -691,11 +727,13 @@ body{
   border-radius: 50%;
 }
 
-.control-input:hover + .control-mark, .control-input:hover ~ .control-label{
+.control-input:hover + .control-mark,
+.control-input:hover ~ .control-label{
   opacity: 0.6;
 }
 
-.control-input:active + .control-mark, .control-input:active ~ .control-label{
+.control-input:active + .control-mark,
+.control-input:active ~ .control-label{
   opacity: 0.3;
 }
 
@@ -778,7 +816,8 @@ body{
   transition: border-color 250ms ease-in-out;
 }
 
-.select-control:not(:disabled):hover, .select-control:not(:disabled):focus-visible{
+.select-control:not(:disabled):hover,
+.select-control:not(:disabled):focus-visible{
   border-color: #83B3D3;
   outline: none;
 }
@@ -925,7 +964,9 @@ body{
   background-position: center;
 }
 
-.catalog-view-mode-button:hover, .catalog-view-mode-button:active, .catalog-view-mode-button-current{
+.catalog-view-mode-button:hover,
+.catalog-view-mode-button:active,
+.catalog-view-mode-button-current{
   border-color: #000000;
 }
 
@@ -1050,7 +1091,8 @@ body{
   flex-wrap: wrap;
 }
 
-.pagination-button, .pagination-ellipsis{
+.pagination-button,
+.pagination-ellipsis{
   font-weight: 700;
   border-radius: 4px;
   text-decoration: none;
@@ -1074,7 +1116,8 @@ body{
   color: #000000;
 }
 
-.pagination-button:hover, .pagination-button:focus-visible{
+.pagination-button:hover,
+.pagination-button:focus-visible{
   background-color: #68A2CA;
   border: 1px solid #82B3D3;
   min-width: 34px;
@@ -1085,10 +1128,272 @@ body{
   color: #FFFFFF4D;
 }
 
-.pagination-button-active, .pagination-button-active:hover, .pagination-button-active:focus-visible, .pagination-button-active:active{
+.pagination-button-active,
+.pagination-button-active:hover,
+.pagination-button-active:focus-visible,
+.pagination-button-active:active{
   background-color: #F2F2F2;
   color: #000000;
   border: none;
   min-width: 36px;
   height: 60px;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #F2F2F2CC;
+  z-index: 10;
+}
+
+.modal{
+  position: relative;
+  padding: 64px 70px;
+  border-radius: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0 25px 50px 0 #00000026;
+}
+
+.modal-close-button{
+  position: absolute;
+  right: 52px;
+  border-radius: 50%;
+  border: none;
+  width: 52px;
+  height: 52px;
+  background-color: #F2F2F2;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus-visible{
+  background-color: #E5E5E5;
+}
+
+.modal-close-button:focus-visible{
+  outline: 3px solid #83B3D3;
+}
+
+.modal-close-button:active .modal-close-button-icon{
+  opacity: 0.3;
+}
+
+.modal-title{
+  margin-bottom: 64px;
+}
+
+.stay-dates{
+  display: grid;
+  gap: 23px 18px;
+  grid-template-columns: max-content 440px;
+  margin-bottom: 23px;
+}
+
+.modal-label{
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
+.input-description{
+  font-size: 16px;
+  line-height: 21px;
+  color: #333333;
+  margin: 4px 0 0 20px;
+}
+
+.input-description.input-error{
+  color: #FF5757;
+}
+
+.modal-input{
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  border: none;
+  border-radius: 4px;
+  background-color: #F2F2F2;
+}
+
+.modal-input:hover, .modal-input:focus-visible{
+  background-color: #E5E5E5;
+}
+
+.modal-input:focus-visible{
+  outline: 3px solid #83B3D3;
+}
+
+.modal-input::placeholder{
+  color: #00000099;
+}
+
+.stay-dates .modal-input{
+  padding: 12px 54px 12px 20px;
+  width: calc(100% - 74px);
+  background-image: url("../images/date.svg");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+}
+
+.stay-dates .modal-label{
+  padding-top: 12px;
+}
+
+.peoples-count{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+
+.peoples-count .modal-input-wrapper{
+  display: flex;
+  gap: 46px;
+  align-items: center;
+}
+
+.tooltip-label{
+  position: relative;
+  padding-right: 36px;
+}
+
+.tooltip {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.tooltip-toggle{
+  color: #FFFFFF;
+  background-color: #83B3D3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: none;
+  width: 26px;
+  height: 26px;
+}
+
+.tooltip-text {
+  background-color: #333333;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: normal;
+  text-transform: none;
+  padding: 20px 18px 23px 22px;
+  border-radius: 8px;
+  width: 216px;
+  position: absolute;
+  left: 50%;
+  top: 41px;
+  transform: translateX(-50%);
+  z-index: 1;
+  display: none;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+.tooltip-text:before {
+  content:'';
+  background-image: url("../images/tooltip-arrow.svg");
+  width: 19px;
+  height: 9px;
+  position: absolute;
+  top: -9px;
+  left:0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.count-input-wrapper{
+  position: relative;
+  border-radius: 4px;
+  width: 110px;
+  height: 48px;
+}
+
+.count-input-button{
+  width: 40px;
+  height: 48px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0;
+  top: 0;
+  background-color: transparent;
+}
+
+.count-input-button:first-child{
+  left: 0;
+}
+
+.count-input-button:last-child{
+  right: 0;
+}
+
+.count-input-button-icon{
+  opacity: 0.3;
+  color: #756157;
+  border-radius: 4px;
+}
+
+.count-input-button:focus-visible{
+  outline: none;
+}
+
+.count-input-button:hover .count-input-button-icon,
+.count-input-button:focus-visible .count-input-button-icon
+{
+  opacity: 1;
+  color: #000000;
+}
+
+.count-input-button:focus-visible .count-input-button-icon{
+  outline: 3px solid #82B3D3;
+}
+
+.count-input-button:active .count-input-button-icon{
+  opacity: 0.3;
+  color: #756157;
+  outline: none;
+}
+
+.count-input-wrapper .modal-input{
+  text-align: center;
+  width: 31px;
+  padding: 14px 40px;
+  line-height: 20px;
+}
+
+.count-input-wrapper .modal-input::-webkit-outer-spin-button,
+.count-input-wrapper .modal-input::-webkit-inner-spin-button{
+  appearance: none;
+  margin: 0;
+}
+
+.hotel-search-form-button{
+  width: 100%;
+  border-radius: 10px;
+  padding: 18px 77px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
 }
