--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,7 +52,7 @@ body{
 }
 
 .container{
-  width: 1060px;
+  max-width: 1060px;
   margin: 0 auto;
 }
 
@@ -168,7 +168,7 @@ body{
   background: #7DB54F;
 }
 
-.main-header{
+.main-header-container{
   display: flex;
   justify-content: space-between;
   gap: 30px;
@@ -267,13 +267,11 @@ body{
   color: #ffffff;
 }
 
-.main-index{
-  text-align: center;
-}
-
 .hero{
   height: 352px;
   padding: 51px 0 82px;
+  display: flex;
+  justify-content: center;
   background-image: url("../images/hero-background.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -284,12 +282,17 @@ body{
   padding-top: 69px;
 }
 
+.advantages-container{
+  margin-bottom: 90px;
+  text-align: center;
+}
+
 .advantages-title{
   margin-bottom: 25px;
 }
 
 .advantages-description{
-  margin-bottom: 90px;
+  margin: 0;
 }
 
 .navigation-list,
@@ -312,7 +315,6 @@ body{
   display: flex;
   width: 1200px;
   flex-wrap: wrap;
-
 }
 
 .advantages-item-title,
@@ -327,7 +329,6 @@ body{
 
 .advantages-item-title,
 .features-item-title{
-  margin: 0 auto 30px;
   width: 175px;
   text-align: center;
 }
@@ -335,19 +336,26 @@ body{
 .advantages-item-description,
 .features-item-description{
   margin: 0;
+  text-align: center;
 }
 
-.advantages-item,
-.features-item,
-.advantages-item-media__text-wrapper{
-  padding: 102px 85px;
+.advantages-item-text-wrapper, .features-item-text-wrapper{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 230px;
-  min-height: 181px;
+  align-items: center;
+  gap: 30px;
+  width: 400px;
+  min-height: 385px;
   flex-grow: 1;
+  padding: 16px;
   background-color: #83B3D333;
+  box-sizing: border-box;
+}
+
+.advantages-item-media .advantages-item-text-wrapper{
+  background-color: #82B3D3;
+  color: #ffffff;
 }
 
 .advantages-item:nth-child(even){
@@ -367,11 +375,6 @@ body{
   flex-direction: row-reverse;
 }
 
-.advantages-item-media__text-wrapper{
-  background-color: #82B3D3;
-  color: #ffffff;
-}
-
 .advantages-item-title::after{
   display: block;
   content: "";
@@ -381,12 +384,8 @@ body{
   background-color: #0000004D;
 }
 
-.advantages-item-media__text-wrapper .advantages-item-title::after{
+.advantages-item-media .advantages-item-title::after{
   background-color: #FFFFFF4D;
-}
-
-.advantages-item:not(.advantages-item-media){
-
 }
 
 .advantages-item-media .advantages-item-description{
@@ -414,7 +413,6 @@ body{
   font-size: 22px;
   line-height: 26px;
   color: #333333;
-  text-align: center;
 }
 
 .advantages-item-description,
@@ -426,24 +424,26 @@ body{
   padding-top: 64px;
 }
 
+.features-container{
+  text-align: center;
+  margin-bottom: 64px;
+}
+
 .features-title{
   margin-bottom: 20px;
 }
 
 .features-description{
-  margin-bottom: 64px;
+  margin-bottom: 0px;
 }
 
-.features-item:before{
+.features-item-text-wrapper:before{
   content: "";
-  position: absolute;
-  top: 81px;
-  left: 50%;
-  transform: translateX(-50%);
+  display: block;
   background-position: center 0;
   background-repeat: no-repeat;
-  width: 80px;
-  height: 80px;
+  width: 75px;
+  height: 72px;
 }
 
 .feature-house::before{
@@ -453,28 +453,26 @@ body{
   background-image: url("../images/features/food.svg");
 }
 .feature-gift::before{
+  height: 76px;
+  margin-top: -2px;
   background-image: url("../images/features/gift.svg");
 }
 
-.features-item{
+.features-item-text-wrapper{
   position: relative;
-  padding-top: 183px;
-  padding-bottom: 81px;
-  min-height: auto;
 }
 
-.features-item:nth-child(odd){
+.features-item:nth-child(odd) .features-item-text-wrapper{
   background-color: #83B3D31F;
 }
 
-.features-item:nth-child(even){
+.features-item:nth-child(even) .features-item-text-wrapper{
   background-color: #ffffff;
 }
 
 .booking{
   padding: 96px 0;
-  margin: 0 auto;
-  width: 592px;
+  text-align: center;
 }
 
 .booking-title{
@@ -487,12 +485,14 @@ body{
 
 .booking-button{
   margin: 0 auto;
+  width: max-content;
 }
 
 .subscription-wrapper{
   padding: 96px 0 104px;
-  width: 684px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
@@ -566,6 +566,7 @@ body{
   padding: 0 10px;
   width: 27px;
   height: 40px;
+  transition: color 250ms ease-in-out;
 }
 
 .social-link:hover{
@@ -596,6 +597,7 @@ body{
 .developer-link,
 .contacts-phone{
   color: #000000;
+  transition: color 250ms ease-in-out;
 }
 
 .developer-link:visited,
@@ -1154,6 +1156,7 @@ body{
 
 .modal{
   position: relative;
+  max-width: 577px;
   padding: 64px 70px;
   border-radius: 30px;
   background-color: #FFFFFF;
