Правки по первой защите

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -238,6 +238,12 @@ body{
   align-items: center;
 }
 
+.navigation-user-button .button{
+  max-width: 170px;
+  text-align: center;
+  text-wrap: wrap;
+}
+
 .navigation-user .navigation-link{
   display: flex;
   justify-content: center;
@@ -718,6 +724,7 @@ body{
   width: 20px;
   height: 20px;
   background-color: #ffffff;
+  flex-shrink: 0;
 }
 
 .control-input[type="checkbox"] + .control-mark{
@@ -843,6 +850,11 @@ body{
   font-size: 18px;
   line-height: 24px;
   background-color: #F2F2F2;
+}
+
+.range-wrapper-inputs .control-input{
+  appearance: textfield;
+  font-family: "PT Sans", sans-serif;
 }
 
 .control-input:hover{
@@ -1385,6 +1397,7 @@ body{
   width: 31px;
   padding: 14px 40px;
   line-height: 20px;
+  appearance: textfield;
 }
 
 .count-input-wrapper .modal-input::-webkit-outer-spin-button,
